feat: update sdk version